--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,12 @@
     --Color1: #c7c7c7;
     --Color2: #0a81ffd8;
     --Color3: #272727;
+
+    /* --bgColor: #f1f1f1;
+    --fgColor: #0f0f0f;
+    --Color1: #919191;
+    --Color2: #0a81ffd8;
+    --Color3: #dcdcdc; */
     font-size: 62.5%;
 }
 
@@ -48,8 +54,10 @@ body::-webkit-scrollbar {
 }
 
 .masterHead i,
-.alertArea i {
+.alertArea i ,
+#mySidenav i{
     font-size: 3.4rem;
+    padding-left: 1rem;
     color: var(--fgColor);
 }
 
@@ -105,6 +113,43 @@ body::-webkit-scrollbar {
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+/* side nav  */
+
+.sidenav {
+    height: 100%;
+    width: 0;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    background-color: var(--Color3);
+    overflow-x: hidden;
+    transition: 0.5s;
+    padding-top: 1rem;
+}
+
+.sidenav p {
+    padding: 8px 8px 8px 32px;
+    text-decoration: none;
+    font-size: 2.5rem;
+    color: #818181;
+    display: block;
+    transition: 0.3s;
+    white-space: nowrap;
+}
+
+.sidenav p:hover {
+    color: var(--fgColor);
+}
+
+.sidenav .closebtn {
+    position: absolute;
+    top: 0;
+    right: 25px;
+    font-size: 36px;
+    margin-left: 50px;
 }
 
 /* navbar ends */
@@ -272,7 +317,6 @@ span {
 }
 
 .statistics h6,
-.alertArea p,
 .statistics p {
     color: var(--fgColor);
     padding: 1rem;
@@ -292,24 +336,26 @@ span {
     /* border: 1px solid red; */
     margin-bottom: 1rem;
 }
-.container iframe{
+
+.container iframe {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
 }
+
 .moreDetails p i {
     color: var(--fgColor);
     font-size: 1.4rem;
 }
 
 /* alert section  */
-.alertArea{
+.alertArea {
     margin: auto;
     min-width: 60%;
     /* height: 28rem; */
-    position: absolute;
+    position: fixed;
     top: 25%;
     left: 50%;
     transform: translateX(-50%);
@@ -323,14 +369,58 @@ span {
     background-color: #ffb005;
     box-shadow: 0.1rem 0.1rem 5px var(--fgColor);
 }
+
 .alertArea i {
     position: absolute;
     right: 5%;
     top: 5%;
 }
-.alertArea h1{
+
+.alertArea h1 {
     font-size: 8rem;
     color: var(--fgColor);
+}
+.alertArea p{
+    color: var(--fgColor);
+    padding: 1rem;
+    font-size: 1.7rem;
+    border-bottom: 2px solid var(--Color3);
+}
+/* history page  */
+button {
+    background-color: var(--Color3);
+    border: none;
+    color: var(--fgColor);
+    display: flex;
+    text-decoration: none;
+    font-size: 1.6rem;
+    width: 13rem;
+    cursor: pointer;
+    height: 5rem;
+    align-items: center;
+    justify-content: space-evenly;
+    margin-left: 3rem;
+}
+button i{
+    font-size: 2rem;
+    color: var(--fgColor);
+}
+
+/* playlist videos  */
+.singlePlaylistVideo{
+    width: 90%;
+    padding: 1rem 0.5rem;
+    margin: 1rem auto ;
+    display: flex;
+    align-items: center;
+    background: var(--Color3);
+    border-radius: 10px;
+    border-top: 1px solid var(--fgColor);
+    border-left: 1px solid var(--fgColor);
+}
+.singlePlaylistVideo img{
+    width: 16rem;
+    height: 9rem;
 }
 @media screen and (max-width:980px) {
     :root {
