--- a/src/App.css
+++ b/src/App.css
@@ -54,6 +54,7 @@ body::-webkit-scrollbar {
     align-items: center;
     justify-content: space-between;
     padding: 8px 5px;
+    z-index: 8;
 }
 
 .masterHead i,
@@ -124,7 +125,7 @@ body::-webkit-scrollbar {
     height: 100%;
     width: 0;
     position: fixed;
-    z-index: 1;
+    z-index: 10;
     top: 0;
     left: 0;
     background-color: var(--Color3);
@@ -205,12 +206,14 @@ body::-webkit-scrollbar {
 
 .thumbnail {
     width: 100%;
-    height: 17rem;
+    height: 15.75rem;
+    position: relative;
+    z-index: 6;
 }
 
 .thumbnail img {
     object-fit: cover;
-    height: 94%;
+    height: 100%;
     width: 100%;
 }
 
@@ -224,6 +227,7 @@ body::-webkit-scrollbar {
 
 .details {
     display: flex;
+    margin-top: 1rem;
 }
 
 .title {
