--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 :root {
     --bgColor: #0f0f0f;
     --fgColor: #f1f1f1;
-    --Color1: #c7c7c7;
+    --Color1: #949494;
     --Color2: #0a81ffd8;
     --Color3: #272727;
 
@@ -217,6 +217,20 @@ body::-webkit-scrollbar {
     width: 100%;
 }
 
+.overlay-playlist-icon {
+    position: absolute;
+    top: 0;
+    right: 0;
+    color: white;
+    width: 30%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.8);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 4rem;
+}
+
 .author img {
     object-fit: cover;
     border-radius: 50%;
@@ -297,6 +311,12 @@ span {
     color: var(--Color1);
 }
 
+.playlist-controls{
+    display: flex;
+    justify-content: center;
+    font-size: 3rem;
+    margin-bottom: 1rem;
+}
 /* chanelabout  */
 .channelAbout {
     width: 95%;
