--- a/src/App.css
+++ b/src/App.css
@@ -48,8 +48,8 @@ body::-webkit-scrollbar {
     width: 100%;
     /* border: 1px solid red; */
     position: sticky;
-    top:0;
-    background:linear-gradient(180deg, var(--Color3),95%, rgba(0,0,0,0));
+    top: 0;
+    background: linear-gradient(180deg, var(--Color3), 95%, rgba(0, 0, 0, 0));
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -58,10 +58,11 @@ body::-webkit-scrollbar {
 }
 
 .masterHead i,
-.alertArea i ,
-#mySidenav i{
+.alertArea i,
+#mySidenav i {
     font-size: 3.4rem;
     padding-left: 1rem;
+    cursor: pointer;
     color: var(--fgColor);
 }
 
@@ -140,6 +141,7 @@ body::-webkit-scrollbar {
     text-decoration: none;
     font-size: 2.5rem;
     color: #818181;
+    cursor: pointer;
     display: block;
     transition: 0.3s;
     white-space: nowrap;
@@ -164,7 +166,6 @@ body::-webkit-scrollbar {
     width: 100%;
     padding: 0.5rem;
     display: flex;
-    justify-content: space-between;
     overflow-x: scroll;
     transition: all 0.5ms ease;
 }
@@ -227,7 +228,7 @@ body::-webkit-scrollbar {
     color: white;
     width: 30%;
     height: 100%;
-    background-color: rgba(0,0,0,0.8);
+    background-color: rgba(0, 0, 0, 0.8);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -257,6 +258,7 @@ body::-webkit-scrollbar {
     line-height: 1.5rem;
     font-size: 1.2rem;
     margin-bottom: 0.4rem;
+    overflow-wrap: anywhere;
 }
 
 
@@ -324,12 +326,13 @@ span {
     font-weight: 600;
 }
 
-.playlist-controls{
+.playlist-controls {
     display: flex;
     justify-content: center;
     font-size: 3rem;
     margin-bottom: 1rem;
 }
+
 /* chanelabout  */
 .channelAbout {
     width: 95%;
@@ -421,12 +424,14 @@ span {
     font-size: 8rem;
     color: var(--fgColor);
 }
-.alertArea p{
+
+.alertArea p {
     color: var(--fgColor);
     padding: 1rem;
     font-size: 1.7rem;
     border-bottom: 2px solid var(--Color3);
 }
+
 /* history page  */
 button {
     background-color: var(--Color3);
@@ -442,16 +447,17 @@ button {
     justify-content: space-evenly;
     margin-left: 3rem;
 }
-button i{
+
+button i {
     font-size: 2rem;
     color: var(--fgColor);
 }
 
 /* playlist videos  */
-.singlePlaylistVideo{
+.singlePlaylistVideo {
     width: 90%;
     padding: 1rem 0.5rem;
-    margin: 1rem auto ;
+    margin: 1rem auto;
     display: flex;
     align-items: center;
     background: var(--Color3);
@@ -459,18 +465,20 @@ button i{
     border-top: 1px solid var(--fgColor);
     border-left: 1px solid var(--fgColor);
 }
-.singlePlaylistVideo img{
+
+.singlePlaylistVideo img {
     width: 16rem;
     height: 9rem;
 }
 
-.bottomLoader{
+.bottomLoader {
     width: 100%;
     height: 8rem;
     display: flex;
     justify-content: center;
 }
-.bottomLoader img{
+
+.bottomLoader img {
     width: 10rem;
 }
 
