--- a/src/App.css
+++ b/src/App.css
@@ -316,7 +316,7 @@ span {
     color: var(--Color1);
 }
 
-.moreDetails p span {
+.moreDetails p>span {
     background-color: var(--fgColor);
     padding: 0.6rem;
     color: var(--Color3);
@@ -331,6 +331,35 @@ span {
     justify-content: center;
     font-size: 3rem;
     margin-bottom: 1rem;
+}
+
+#description-btn {
+    background-color: var(--fgColor);
+    color: var(--Color3);
+    display: inline-block;
+    margin: 0 0.5rem;
+    border-radius: 0.4rem;
+    font-size: 1.4rem;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    padding: 0.4rem;
+    user-select: none;
+}
+
+#description-btn>span {
+    display: inline-block;
+    padding: 0.1rem;
+    color: var(--Color3);
+    border-radius: 50%;
+    transition: all 0.5s ease;
+}
+
+.description-box {
+    position: relative;
+    font-size: 1.5rem;
+    margin-left: 1rem;
+    white-space: pre-wrap;
 }
 
 /* chanelabout  */
@@ -433,7 +462,7 @@ span {
 }
 
 /* history page  */
-button {
+#clear-btn {
     background-color: var(--Color3);
     border: none;
     color: var(--fgColor);
@@ -448,7 +477,7 @@ button {
     margin-left: 3rem;
 }
 
-button i {
+#clear-btn i {
     font-size: 2rem;
     color: var(--fgColor);
 }
