--- a/src/App.css
+++ b/src/App.css
@@ -504,12 +504,21 @@ span {
 }
 
 /* alert section  */
+.overlay {
+    position: fixed;
+    width: 100%;
+    height: 105%;
+    top: -1rem;
+    z-index: 7;
+    background-color: #000000e6;
+}
+
 .alertArea {
     margin: auto;
     min-width: 60%;
     /* height: 28rem; */
     position: fixed;
-    z-index: 6;
+    z-index: 7;
     top: 25%;
     left: 50%;
     transform: translateX(-50%);
